--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ nav {
     font-weight: bold;
     margin-right: 0.3125rem;
     border: none;
+    transition: 100ms ease;
 }
 
 .Login>button:hover {
